examples/test/testpolicy5399.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5399
  namespace: namespace223
spec:
  podSelector:
    matchLabels:
      key39: value34
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key46: value36
          key47: value7
      podSelector:
        matchLabels:
          key19: value1
          key20: value32
